# internal/app/ds/dto.go
@@ -70,6 +70,7 @@ type CartBadgeDTO struct {
 }
 
 type UserRegisterRequest struct {
+	FullName string `json:"full_name" binding:"required"`
 	Username string `json:"username" binding:"required"`
 	Password string `json:"password" binding:"required"`
 }
@@ -81,11 +82,13 @@ type UserLoginRequest struct {
 
 type UserDTO struct {
 	ID        uint   `json:"id"`
+	FullName  string `json:"full_name"`
 	Username  string `json:"username"`
 	Moderator bool   `json:"moderator"`
 }
 
 type UserUpdateRequest struct {
+	FullName *string `json:"full_name"`
 	Username *string `json:"username"`
 	Password *string `json:"password"`
 }
